tunnel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      serviceAccountName: cloudflared
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          args:
            - tunnel
            - --no-autoupdate
            - run
            - --token-file=/etc/cloudflared/token
          volumeMounts:
            - name: tokenfile
              mountPath: /etc/cloudflared
              readOnly: true
      volumes:
        - name: tokenfile
          secret:
            secretName: cloudflared-token
            items:
              - key: TOKEN
                path: token
